<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="70dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/poppinsmedium"
        android:textAlignment="center"
        android:textColor="@color/blue_500"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/ic_people" />



    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:drawableEnd="@drawable/ic_lock"/>


    <TextView
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="15dp"
        android:text="@string/forgot_pass"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="15sp" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_button"
        android:layout_marginStart="140dp"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/register_now"
        android:textColor="@color/black"
        android:textSize="12sp" />


</LinearLayout>