<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".User_rescuers">

    <Button
        android:id="@+id/btn_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="275dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/maps"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/call_rescue"
        android:fontFamily="@font/poppinsmedium"
        android:textAlignment="center"
        android:textColor="@color/blue_500"
        android:textSize="35sp" />



    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:drawableEnd="@drawable/ic_phone" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:drawableEnd="@drawable/ic_location" />


    <Button
        android:id="@+id/btn_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_button"
        android:text="@string/call_now"
        android:textColor="@color/white"
        android:textSize="13sp" />

</LinearLayout>