<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="70dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/poppinsmedium"
        android:textAlignment="center"
        android:textColor="@color/blue_500"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/ic_person" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:drawableEnd="@drawable/ic_people" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:drawableEnd="@drawable/ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:drawableEnd="@drawable/ic_phone" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_button"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="13sp" />

</LinearLayout>