<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blue_500"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/firsttext"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/rescue_safely"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:background="@color/blue_500"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </LinearLayout>


    <ImageView
        android:id="@+id/logo"
        android:layout_width="212dp"
        android:layout_height="98dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:src="@drawable/logomain" />

    <TextView
        android:id="@+id/index_text"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/bike_helper"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/second_text"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/text"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="italic" />


</LinearLayout>